# ocaml-schroedinger

./: .travis.yml  CHANGES  Makefile.in  README  configure.ac
examples/: Makefile  schrotranscode.ml
src/: META.in  Makefile.in  ogg_demuxer_schroedinger_decoder.ml  ogg_demuxer_schroedinger_decoder.mli  schroedinger.ml  schroedinger.mli  schroedinger_stubs.c
